added validation for phone number, changed index

--- a/src/index.html
+++ b/src/index.html
@@ -6,33 +6,6 @@
     <title>Test </title>
 </head>
 <body>
-<!--<header class="header">-->
-<!--    <div class="container">-->
-<!--        <div class="header__wrapper">-->
-<!--            <a href="/" class="header__logo">-->
-<!--                <img src="./assets/img/logo.svg" alt="logo" class="header__logo-img">-->
-<!--            </a>-->
-<!--            <ul class="nav header__nav">-->
-<!--                <li class="nav__item active">-->
-<!--                    <a href="#" class="nav__link">Бизнес</a>-->
-<!--                </li>-->
-<!--                <li class="nav__item">-->
-<!--                    <a href="#" class="nav__link">О нас</a>-->
-<!--                </li>-->
-<!--                <li class="nav__item">-->
-<!--                    <a href="#" class="nav__link">Цены</a>-->
-<!--                </li>-->
-<!--                <li class="nav__item">-->
-<!--                    <a href="#" class="nav__link">Оформить заказ</a>-->
-<!--                </li>-->
-<!--            </ul>-->
-<!--            <button class="header__btn">-->
-<!--                <img class="header__btn-open" src="./assets/img/burger.svg" alt="burger">-->
-<!--                <img class="header__btn-close hidden" src="./assets/img/close.svg" alt="close">-->
-<!--            </button>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</header>-->
 <div class="container">
     <section class="main">
         <h2 class="main__uptitle">Усиление и ремонт композитными материалами</h2>
@@ -193,7 +166,7 @@
         <p class="feedback__subtitle">Оставьте заявку и мы свяжемся с Вами в ближайшее время</p>
         <form class="feedback__form" action="#">
             <input type="text" class="input feedback__form-input" placeholder="Имя">
-            <input type="number" maxlength="11" class="input feedback__form-input" placeholder="Телефон">
+            <input type="text" class="js-type-phone input feedback__form-input" placeholder="Телефон">
             <input type="email" class="input feedback__form-input" placeholder="E-mail">
             <div class="wrapper feedback__form-wrapper">
                 <label class="feedback__form-label">
@@ -205,52 +178,5 @@
         </form>
     </section>
 </div>
-<!--<footer class="footer">-->
-<!--    <div class="container">-->
-<!--        <div class="wrapper">-->
-<!--            <div class="footer__copyright">-->
-<!--                &copy; 2018 «LOREMIPSUM.NET» Все права защищены.-->
-<!--            </div>-->
-<!--            <div class="footer__payments payments">-->
-<!--                <div class="wrapper">-->
-<!--                    <div class="info payments__info">-->
-<!--                        <div class="info__img">-->
-<!--                            <img src="./assets/img/qiwi.svg" alt="Qiwi wallet">-->
-<!--                        </div>-->
-<!--                        <span class="info__text">Qiwi wallet</span>-->
-<!--                    </div>-->
-<!--                    <div class="info payments__info">-->
-<!--                        <div class="info__img">-->
-<!--                            <img src="./assets/img/yandex-money.svg" alt="Yandex Money">-->
-<!--                        </div>-->
-<!--                        <span class="info__text">Yandex Money</span>-->
-<!--                    </div>-->
-<!--                    <div class="info payments__info">-->
-<!--                        <div class="info__img">-->
-<!--                            <img src="./assets/img/webmoney.svg" alt="Web Money">-->
-<!--                        </div>-->
-<!--                        <span class="info__text">Web Money</span>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="footer__contacts contacts">-->
-<!--                <div class="wrapper">-->
-<!--                    <a href="mailto:info@ipsum228.com" class="info contacts__info">-->
-<!--                        <div class="info__img">-->
-<!--                            <img src="./assets/img/email.svg" alt="mail">-->
-<!--                        </div>-->
-<!--                        <span class="info__text">info@ipsum228.com</span>-->
-<!--                    </a>-->
-<!--                    <a href="#" class="info contacts__info">-->
-<!--                        <div class="info__img">-->
-<!--                            <img src="./assets/img/vk.svg" alt="vk">-->
-<!--                        </div>-->
-<!--                        <span class="info__text">Мы вконтакте</span>-->
-<!--                    </a>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</footer>-->
 </body>
 </html>
