added service page + changes in webpack.config

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test </title>
+    <title>Index page</title>
 </head>
 <body>
 <div class="container">
@@ -48,7 +48,7 @@
                             <p class="task-list__description">Усилить конструкции и перекрытия,
                                 прорезать отверстия под инженерные коммуникации.</p>
                         </div>
-                        <div class="task-list__item task_gray">
+                        <div class="task-list__item task-list__item_gray">
                             <h5 class="task-list__name">Решение</h5>
                             <p class="task-list__description">Наши проектировщики замоноличивали
                                 старые и прорезали новые отверстия под коммуникации.</p>
@@ -70,7 +70,7 @@
                             <p class="task-list__description">Усилить конструкции и перекрытия,
                                 прорезать отверстия под инженерные коммуникации.</p>
                         </div>
-                        <div class="task-list__item task_gray">
+                        <div class="task-list__item task-list__item_gray">
                             <h5 class="task-list__name">Решение</h5>
                             <p class="task-list__description">Наши проектировщики замоноличивали
                                 старые и прорезали новые отверстия под коммуникации.</p>
@@ -92,7 +92,7 @@
                             <p class="task-list__description">Усилить конструкции и перекрытия,
                                 прорезать отверстия под инженерные коммуникации.</p>
                         </div>
-                        <div class="task-list__item task_gray">
+                        <div class="task-list__item task-list_item_gray">
                             <h5 class="task-list__name">Решение</h5>
                             <p class="task-list__description">Наши проектировщики замоноличивали
                                 старые и прорезали новые отверстия под коммуникации.</p>
