details-page, fixed styles & html

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,9 +39,9 @@
     <section class="projects">
         <h3 class="projects__title">Объекты</h3>
         <div class="projects__list">
-            <a href="#" class="project-item">
+            <div class="project-item">
                 <div class="project-item__left">
-                    <h3 class="project-item__title">ВТБ Арена Динамо</h3>
+                    <a href="#" class="project-item__title">ВТБ Арена Динамо</a>
                     <div class="task-list project-item__task-list">
                         <div class="task-list__item">
                             <h5 class="task-list__name">Задача</h5>
@@ -53,17 +53,16 @@
                             <p class="task-list__description">Наши проектировщики замоноличивали
                                 старые и прорезали новые отверстия под коммуникации.</p>
                         </div>
-
                     </div>
-                    <button class="btn project-item__btn">Все объекты</button>
+                    <a href="#" class="btn project-item__btn">Все объекты</a>
                 </div>
                 <div class="project-item__right">
                     <img src="./assets/img/stadium.png" alt="stadium">
                 </div>
-            </a>
-            <a href="#" class="project-item">
+            </div>
+            <div class="project-item">
                 <div class="project-item__left">
-                    <h3 class="project-item__title">ВТБ Арена Динамо</h3>
+                    <a href="#" class="project-item__title">ВТБ Арена Динамо</a>
                     <div class="task-list project-item__task-list">
                         <div class="task-list__item">
                             <h5 class="task-list__name">Задача</h5>
@@ -75,17 +74,16 @@
                             <p class="task-list__description">Наши проектировщики замоноличивали
                                 старые и прорезали новые отверстия под коммуникации.</p>
                         </div>
-
                     </div>
-                    <button class="btn project-item__btn">Все объекты</button>
+                    <a href="#" class="btn project-item__btn">Все объекты</a>
                 </div>
                 <div class="project-item__right">
                     <img src="./assets/img/stadium.png" alt="stadium">
                 </div>
-            </a>
-            <a href="#" class="project-item">
+            </div>
+            <div class="project-item">
                 <div class="project-item__left">
-                    <h3 class="project-item__title">ВТБ Арена Динамо</h3>
+                    <a href="#" class="project-item__title">ВТБ Арена Динамо</a>
                     <div class="task-list project-item__task-list">
                         <div class="task-list__item">
                             <h5 class="task-list__name">Задача</h5>
@@ -97,15 +95,14 @@
                             <p class="task-list__description">Наши проектировщики замоноличивали
                                 старые и прорезали новые отверстия под коммуникации.</p>
                         </div>
-
                     </div>
-                    <button class="btn project-item__btn">Все объекты</button>
+                    <a href="#" class="btn project-item__btn">Все объекты</a>
                 </div>
                 <div class="project-item__right">
                     <img src="./assets/img/stadium.png" alt="stadium">
                 </div>
-            </a>
-            <button class="btn projects__btn">Все объекты</button>
+            </div>
+            <a href="#" class="btn projects__btn">Все объекты</a>
         </div>
     </section>
     <section class="customers">
