new blocks for services-detail page

--- a/src/services.html
+++ b/src/services.html
@@ -140,12 +140,12 @@
           на <span>расчет стоимости бесплатно</span></h3>
         <p class="feedback__subtitle">Оставьте заявку и мы свяжемся с Вами в ближайшее время</p>
         <form class="feedback__form" action="#">
-          <input type="text" class="input feedback__form-input" placeholder="Имя">
-          <input type="text" class="js-type-phone input feedback__form-input" placeholder="Телефон">
-          <input type="email" class="input feedback__form-input" placeholder="E-mail">
+          <input type="text" class="input feedback__form-input" placeholder="Имя" required>
+          <input type="text" class="js-type-phone input feedback__form-input" placeholder="Телефон" required>
+          <input type="email" class="input feedback__form-input" placeholder="E-mail" required>
           <div class="wrapper feedback__form-wrapper">
             <label class="feedback__form-label">
-              <input type="checkbox" class="checkbox feedback__form-checkbox">
+              <input checked type="checkbox" class="checkbox feedback__form-checkbox" required>
               <p class="feedback__form-text">Нажимая на кнопку «Отправить» вы соглашаетесь на обработку персональных данных</p>
             </label>
             <button class="btn feedback__form-btn">Отправить</button>
