--- a/src/services-detail.html
+++ b/src/services-detail.html
@@ -117,8 +117,140 @@
           <p class="advantages__description">Нет ограничений, связанных с размерами</p>
         </div>
       </div>
-
     </div>
+  </section>
+  <section class="prices">
+    <h3 class="prices__title">Цены на усиление углеволокном</h3>
+    <div class="prices__table">
+      <div class="prices__table-item">
+        <p class="prices__name">Проёмы и отверстия</p>
+        <div class="prices__order">
+          <p class="prices__cost">от 2 600 руб/м2</p>
+          <a href="#" class="btn btn_s prices__btn">Заказать</a>
+        </div>
+      </div>
+      <div class="prices__table-item">
+        <p class="prices__name">Усиление перекрытий и покрытий</p>
+        <div class="prices__order">
+          <p class="prices__cost">от 6 550 руб/м2</p>
+          <a href="#" class="btn btn_s prices__btn">Заказать</a>
+        </div>
+      </div>
+      <div class="prices__table-item">
+        <p class="prices__name">Стены и пилоны</p>
+        <div class="prices__order">
+          <p class="prices__cost">от 2 550 руб/м2</p>
+          <a href="#" class="btn btn_s prices__btn">Заказать</a>
+        </div>
+      </div>
+      <div class="prices__table-item">
+        <p class="prices__name">Ригели/балки</p>
+        <div class="prices__order">
+          <p class="prices__cost">от 75 000 руб. за тонну</p>
+          <a href="#" class="btn btn_s prices__btn">Заказать</a>
+        </div>
+      </div>
+      <div class="prices__table-item">
+        <p class="prices__name">Железобетонные фермы</p>
+        <div class="prices__order">
+          <p class="prices__cost">от 2 700 руб за п.м.</p>
+          <a href="#" class="btn btn_s prices__btn">Заказать</a>
+        </div>
+      </div>
+      <div class="prices__table-item">
+        <p class="prices__name">Колонны</p>
+        <div class="prices__order">
+          <p class="prices__cost">от 2 650 руб/м2</p>
+          <a href="#" class="btn btn_s prices__btn">Заказать</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="projects">
+    <h3 class="projects__title">Объекты</h3>
+    <div class="projects__list">
+      <div class="project-item">
+        <div class="project-item__left">
+          <a href="#" class="project-item__title">ВТБ Арена Динамо</a>
+          <div class="task-list project-item__task-list">
+            <div class="task-list__item">
+              <h5 class="task-list__name">Задача</h5>
+              <p class="task-list__description">Усилить конструкции и перекрытия,
+                прорезать отверстия под инженерные коммуникации.</p>
+            </div>
+            <div class="task-list__item task-list__item_gray">
+              <h5 class="task-list__name">Решение</h5>
+              <p class="task-list__description">Наши проектировщики замоноличивали
+                старые и прорезали новые отверстия под коммуникации.</p>
+            </div>
+          </div>
+          <a href="#" class="btn project-item__btn">Все объекты</a>
+        </div>
+        <div class="project-item__right">
+          <img src="./assets/img/stadium.png" alt="stadium">
+        </div>
+      </div>
+      <div class="project-item">
+        <div class="project-item__left">
+          <a href="#" class="project-item__title">ВТБ Арена Динамо</a>
+          <div class="task-list project-item__task-list">
+            <div class="task-list__item">
+              <h5 class="task-list__name">Задача</h5>
+              <p class="task-list__description">Усилить конструкции и перекрытия,
+                прорезать отверстия под инженерные коммуникации.</p>
+            </div>
+            <div class="task-list__item task-list__item_gray">
+              <h5 class="task-list__name">Решение</h5>
+              <p class="task-list__description">Наши проектировщики замоноличивали
+                старые и прорезали новые отверстия под коммуникации.</p>
+            </div>
+          </div>
+          <a href="#" class="btn project-item__btn">Все объекты</a>
+        </div>
+        <div class="project-item__right">
+          <img src="./assets/img/stadium.png" alt="stadium">
+        </div>
+      </div>
+      <div class="project-item">
+        <div class="project-item__left">
+          <a href="#" class="project-item__title">ВТБ Арена Динамо</a>
+          <div class="task-list project-item__task-list">
+            <div class="task-list__item">
+              <h5 class="task-list__name">Задача</h5>
+              <p class="task-list__description">Усилить конструкции и перекрытия,
+                прорезать отверстия под инженерные коммуникации.</p>
+            </div>
+            <div class="task-list__item task-list_item_gray">
+              <h5 class="task-list__name">Решение</h5>
+              <p class="task-list__description">Наши проектировщики замоноличивали
+                старые и прорезали новые отверстия под коммуникации.</p>
+            </div>
+          </div>
+          <a href="#" class="btn project-item__btn">Все объекты</a>
+        </div>
+        <div class="project-item__right">
+          <img src="./assets/img/stadium.png" alt="stadium">
+        </div>
+      </div>
+      <a href="#" class="btn projects__btn">Все объекты</a>
+    </div>
+  </section>
+  <section class="feedback">
+    <h3 class="feedback__title">Отправить проект <br>
+      на <span>расчет стоимости бесплатно</span></h3>
+    <p class="feedback__subtitle">Оставьте заявку и мы свяжемся с Вами в ближайшее время</p>
+    <form class="feedback__form" action="#">
+      <input type="text" class="input feedback__form-input" placeholder="Имя" required>
+      <input type="text" class="js-type-phone input feedback__form-input" placeholder="Телефон" required>
+      <input type="email" class="input feedback__form-input" placeholder="E-mail" required>
+      <div class="wrapper feedback__form-wrapper">
+        <label class="feedback__form-label">
+          <input type="checkbox" class="checkbox feedback__form-checkbox" required checked>
+          <p class="feedback__form-text">Нажимая на кнопку «Отправить» вы соглашаетесь на обработку персональных данных</p>
+        </label>
+        <button class="btn feedback__form-btn">Отправить</button>
+      </div>
+    </form>
   </section>
 </div>
 </body>
