--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
                     <img src="./assets/img/stadium.png" alt="stadium">
                 </div>
             </div>
-            <div class="project-item">
+            <div class="project-item project-item_hidden">
                 <div class="project-item__left">
                     <a href="#" class="project-item__title">ВТБ Арена Динамо</a>
                     <div class="task-list project-item__task-list">
@@ -81,7 +81,7 @@
                     <img src="./assets/img/stadium.png" alt="stadium">
                 </div>
             </div>
-            <div class="project-item">
+            <div class="project-item project-item_hidden">
                 <div class="project-item__left">
                     <a href="#" class="project-item__title">ВТБ Арена Динамо</a>
                     <div class="task-list project-item__task-list">
@@ -90,7 +90,7 @@
                             <p class="task-list__description">Усилить конструкции и перекрытия,
                                 прорезать отверстия под инженерные коммуникации.</p>
                         </div>
-                        <div class="task-list__item task-list_item_gray">
+                        <div class="task-list__item task-list__item_gray">
                             <h5 class="task-list__name">Решение</h5>
                             <p class="task-list__description">Наши проектировщики замоноличивали
                                 старые и прорезали новые отверстия под коммуникации.</p>
