projects-detail page & some changes

--- a/src/about.html
+++ b/src/about.html
@@ -15,9 +15,9 @@
                 </a>
             </li>
             <li class="breadcrumbs__item">
-                <a href="/" class="breadcrumbs__link">
+                <span class="breadcrumbs__link">
                     О компании
-                </a>
+                </span>
             </li>
         </ul>
         <h1 class="lead-block__title">О компании</h1>
