--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <p class="about__text">Мы развиваемся в разных областях, но в приоритете
             <span>усиление композитными волокнами</span> несущих из железобетона и металлов,
             а также восстановление железобетонных конструкций.</p>
-        <button class="btn about__btn">О нас</button>
+        <a href="/about.html" class="btn about__btn">О нас</a>
     </section>
     <section class="projects">
         <h3 class="projects__title">Объекты</h3>
@@ -54,7 +54,7 @@
                                 старые и прорезали новые отверстия под коммуникации.</p>
                         </div>
                     </div>
-                    <a href="#" class="btn project-item__btn">Все объекты</a>
+                    <a href="/projects.html" class="btn project-item__btn">Все объекты</a>
                 </div>
                 <div class="project-item__right">
                     <img src="./assets/img/stadium.png" alt="stadium">
@@ -75,7 +75,7 @@
                                 старые и прорезали новые отверстия под коммуникации.</p>
                         </div>
                     </div>
-                    <a href="#" class="btn project-item__btn">Все объекты</a>
+                    <a href="/projects.html" class="btn project-item__btn">Все объекты</a>
                 </div>
                 <div class="project-item__right">
                     <img src="./assets/img/stadium.png" alt="stadium">
@@ -96,13 +96,13 @@
                                 старые и прорезали новые отверстия под коммуникации.</p>
                         </div>
                     </div>
-                    <a href="#" class="btn project-item__btn">Все объекты</a>
+                    <a href="/projects.html" class="btn project-item__btn">Все объекты</a>
                 </div>
                 <div class="project-item__right">
                     <img src="./assets/img/stadium.png" alt="stadium">
                 </div>
             </div>
-            <a href="#" class="btn projects__btn">Все объекты</a>
+            <a href="/projects.html" class="btn projects__btn">Все объекты</a>
         </div>
     </section>
     <section class="customers">
