--- a/src/projects.html
+++ b/src/projects.html
@@ -16,9 +16,9 @@
                         </a>
                     </li>
                     <li class="breadcrumbs__item">
-                        <a href="/" class="breadcrumbs__link">
+                        <span class="breadcrumbs__link">
                             Проекты
-                        </a>
+                        </span>
                     </li>
                 </ul>
                 <h1 class="lead-block__title lead-block__title_white">Проекты</h1>
@@ -31,7 +31,7 @@
                                 <div class="project-item__icon">
                                     <img src="./assets/img/icons/arrow.svg">
                                 </div>
-                                <a href="#" class="project-item__title">ТРЦ Атриум</a>
+                                <a href="/projects-detail.html" class="project-item__title">ТРЦ Атриум</a>
                             </div>
                             <div class="task-list project-item__task-list">
                                 <div class="task-list__item">
@@ -52,7 +52,7 @@
                                 <div class="project-item__icon">
                                     <img src="./assets/img/icons/arrow.svg">
                                 </div>
-                                <a href="#" class="project-item__title">ТРЦ Атриум</a>
+                                <a href="/projects-detail.html" class="project-item__title">ТРЦ Атриум</a>
                             </div>
                             <div class="task-list project-item__task-list">
                                 <div class="task-list__item">
@@ -73,7 +73,7 @@
                                 <div class="project-item__icon">
                                     <img src="./assets/img/icons/arrow.svg">
                                 </div>
-                                <a href="#" class="project-item__title">ТРЦ Атриум</a>
+                                <a href="/projects-detail.html" class="project-item__title">ТРЦ Атриум</a>
                             </div>
                             <div class="task-list project-item__task-list">
                                 <div class="task-list__item">
