--- a/src/reviews.html
+++ b/src/reviews.html
@@ -16,9 +16,9 @@
             </a>
           </li>
           <li class="breadcrumbs__item">
-            <a href="/" class="breadcrumbs__link">
+            <span class="breadcrumbs__link">
               Отзывы
-            </a>
+            </span>
           </li>
         </ul>
         <h1 class="lead-block__title lead-block__title_white">Отзывы</h1>
