--- a/src/services-detail.html
+++ b/src/services-detail.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Services detail page</title>
+  <title>Services Detail page</title>
 </head>
 <body>
 <div class="container">
@@ -15,14 +15,14 @@
           </a>
         </li>
         <li class="breadcrumbs__item">
-          <a href="/" class="breadcrumbs__link">
+          <a href="/services.html" class="breadcrumbs__link">
             Услуги
           </a>
         </li>
         <li class="breadcrumbs__item">
-          <a href="/" class="breadcrumbs__link">
+          <span class="breadcrumbs__link">
             Усиление углеволокном
-          </a>
+          </span>
         </li>
       </ul>
       <h1 class="lead-block__title">Усиление углеволокном</h1>
@@ -34,16 +34,16 @@
       </p>
       <div class="lead-block__images">
         <div class="lead-block__image">
-          <img src="./assets/img/big-img.png" alt="big-img">
+          <img src="./assets/img/projects/big-img.png" alt="big-img">
         </div>
         <div class="lead-block__image lead-block__image_medium lead-block__image_left">
-          <img src="./assets/img/medium-left.png" alt="medium-img">
+          <img src="./assets/img/projects/medium-left.png" alt="medium-img">
         </div>
         <div class="lead-block__image lead-block__image_medium lead-block__image_right">
-          <img src="./assets/img/medium-right.png" alt="medium-img-right">
+          <img src="./assets/img/projects/medium-right.png" alt="medium-img-right">
         </div>
         <div class="lead-block__image lead-block__image_small">
-          <img src="./assets/img/sm-img.png" alt="small-img">
+          <img src="./assets/img/projects/sm-img.png" alt="small-img">
         </div>
         <a href="#" class="caption lead-block__caption">
           <p class="caption__text">Вызвать <br> инженера</p>
