changed paths & css, added slick-carousel

--- a/src/projects-detail.html
+++ b/src/projects-detail.html
@@ -15,7 +15,7 @@
                 </a>
             </li>
             <li class="breadcrumbs__item">
-                <a href="/projects.html" class="breadcrumbs__link">
+                <a href="./projects.html" class="breadcrumbs__link">
                     Проекты
                 </a>
             </li>
