--- a/src/projects.html
+++ b/src/projects.html
@@ -31,7 +31,7 @@
                                 <div class="project-item__icon">
                                     <img src="./assets/img/icons/arrow.svg">
                                 </div>
-                                <a href="/projects-detail.html" class="project-item__title">ТРЦ Атриум</a>
+                                <a href="./projects-detail.html" class="project-item__title">ТРЦ Атриум</a>
                             </div>
                             <div class="task-list project-item__task-list">
                                 <div class="task-list__item">
@@ -52,7 +52,7 @@
                                 <div class="project-item__icon">
                                     <img src="./assets/img/icons/arrow.svg">
                                 </div>
-                                <a href="/projects-detail.html" class="project-item__title">ТРЦ Атриум</a>
+                                <a href="./projects-detail.html" class="project-item__title">ТРЦ Атриум</a>
                             </div>
                             <div class="task-list project-item__task-list">
                                 <div class="task-list__item">
@@ -73,7 +73,7 @@
                                 <div class="project-item__icon">
                                     <img src="./assets/img/icons/arrow.svg">
                                 </div>
-                                <a href="/projects-detail.html" class="project-item__title">ТРЦ Атриум</a>
+                                <a href="./projects-detail.html" class="project-item__title">ТРЦ Атриум</a>
                             </div>
                             <div class="task-list project-item__task-list">
                                 <div class="task-list__item">
