--- a/src/services-detail.html
+++ b/src/services-detail.html
@@ -15,7 +15,7 @@
           </a>
         </li>
         <li class="breadcrumbs__item">
-          <a href="/services.html" class="breadcrumbs__link">
+          <a href="./services.html" class="breadcrumbs__link">
             Услуги
           </a>
         </li>
@@ -184,7 +184,7 @@
                 старые и прорезали новые отверстия под коммуникации.</p>
             </div>
           </div>
-          <a href="#" class="btn project-item__btn">Все объекты</a>
+          <a href="./projects.html" class="btn project-item__btn">Все объекты</a>
         </div>
         <div class="project-item__right">
           <img src="./assets/img/stadium.png" alt="stadium">
@@ -205,7 +205,7 @@
                 старые и прорезали новые отверстия под коммуникации.</p>
             </div>
           </div>
-          <a href="#" class="btn project-item__btn">Все объекты</a>
+          <a href="./projects.html" class="btn project-item__btn">Все объекты</a>
         </div>
         <div class="project-item__right">
           <img src="./assets/img/stadium.png" alt="stadium">
@@ -226,13 +226,13 @@
                 старые и прорезали новые отверстия под коммуникации.</p>
             </div>
           </div>
-          <a href="#" class="btn project-item__btn">Все объекты</a>
+          <a href="./projects.html" class="btn project-item__btn">Все объекты</a>
         </div>
         <div class="project-item__right">
           <img src="./assets/img/stadium.png" alt="stadium">
         </div>
       </div>
-      <a href="#" class="btn projects__btn">Все объекты</a>
+      <a href="./projects.html" class="btn projects__btn">Все объекты</a>
     </div>
   </section>
   <section class="feedback">
