--- a/src/projects-detail.html
+++ b/src/projects-detail.html
@@ -67,6 +67,28 @@
             </div>
         </div>
     </section>
+    <section class="slider">
+        <div class="slider-item">
+            <div class="slider-item__layout"></div>
+            <img class="slider-item__image"src="./assets/img/projects-detail/medium-left.png" alt="">
+        </div>
+        <div class="slider-item">
+            <div class="slider-item__layout"></div>
+            <img class="slider-item__image"src="./assets/img/projects-detail/big-img.png" alt="">
+        </div>
+        <div class="slider-item">
+            <div class="slider-item__layout"></div>
+            <img class="slider-item__image"src="./assets/img/projects-detail/medium-right.png" alt="">
+        </div>
+        <div class="slider-item">
+            <div class="slider-item__layout"></div>
+            <img class="slider-item__image"src="./assets/img/projects-detail/big-img.png" alt="">
+        </div>
+        <div class="slider-item">
+            <div class="slider-item__layout"></div>
+            <img class="slider-item__image"src="./assets/img/projects-detail/medium-right.png" alt="">
+        </div>
+    </section>
     <section class="advantages">
         <div class="method-item">
             <h3 class="method-item__title method-item__title_white">Решение</h3>
