--- a/src/index.html
+++ b/src/index.html
@@ -174,6 +174,42 @@
             </div>
         </form>
     </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__top">
+                <ul class="footer__list">
+                    <li class="footer__item">
+                        <a href="./about.html" class="footer__link">О компании</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="./services.html" class="footer__link">Услуги</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="./projects.html" class="footer__link">Проекты</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="./feedback.html" class="footer__link">Отзывы</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="./contacts.html" class="footer__link">Контакты</a>
+                    </li>
+                </ul>
+                <div class="footer__contacts">
+                    <div class="footer__phone">
+                        <a href="tel:+74950326738" class="footer__link">+7 (495) 032-67-38</a>
+                    </div>
+                    <div class="footer__mail">
+                        <a href="mailto:info@ktb-astroi.ru" class="footer__link">info@ktb-astroi.ru</a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__bottom">
+                <p class="footer__copyright">© ИнноваТех, 2021. Все права защищены.</p>
+                <p class="footer__developer">Разработано  <a class="footer__author" href="https://github.com/pain1k" target="_blank">Nikita Sizov</a></p>
+            </div>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
