--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,48 @@
 </head>
 <body>
 <div class="container">
+    <header class="header">
+        <div class="header__wrapper">
+            <button class="burger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <a href="./" class="logo header__logo">
+                <img class="logo__img" src="./assets/img/logo.svg" alt="logo">
+                <span class="logo__text">Ремонт и усилениие строительных конструкций</span>
+            </a>
+            <div class="header__center">
+                <ul class="header__list">
+                    <li class="header__item">
+                        <a href="./services.html" class="header__link">Услуги</a>
+                        <img src="./assets/img/icons/arrow.svg" alt="arrow" class="header__more header__more_opened">
+                    </li>
+                    <li class="header__item">
+                        <a href="./projects.html" class="header__link">Проекты</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="./contacts.html" class="header__link">Контакты</a>
+                    </li>
+                </ul>
+                <div class="header__contacts">
+                    <div class="header__phone">
+                        <a class="header__phone-link" href="tel:+74950326738">+7 (495) 032-67-38</a>
+                    </div>
+                    <div class="header__mail">
+                        <a class="header__mail-link" href="mailto:info@ktb-astroi.ru">info@ktb-astroi.ru</a>
+                    </div>
+                </div>
+                <a href="#form" class="header__button">
+                    Помочь с выбором
+                    <span class="header__icon"></span>
+                </a>
+            </div>
+            <div class="header__callback">
+                <img src="./assets/img/icons/phone.svg" alt="phone">
+            </div>
+        </div>
+    </header>
     <section class="main">
         <h2 class="main__uptitle">Усиление и ремонт композитными материалами</h2>
         <img src="./assets/img/main.png" alt="poster" class="main__poster">
